[package]
name = "vekslosh"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.71"
hyper = { version = "0.14.15", features = ["server", "tcp", "http1"] }
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.14"
serde_derive = "1.0.130"
reqwest = { version = "0.11.6", features = ["json"] }
futures = "0.3.18"
hmac-sha256 = "1.0.0"
env_logger = "0.9.0"
dirs-next = "2.0.0"
toml = "0.5.8"
